--- a/test_2/styles.css
+++ b/test_2/styles.css
@@ -13,9 +13,10 @@
   --secondary-main: #008c82;
 
   --cardShadow: 3px 3px 7px rgba(0, 0, 0, 0.1);
+  --textShadow: 1px 1px 8px rgba(0, 0, 0, 0.1);
 
-  --roboto: "Roboto", sans-serif;
-  --ubuntu: "Ubuntu", sans-serif;
+  --primary-font: "Roboto", sans-serif;
+  --secondary-font: "Ubuntu", sans-serif;
 }
 
 /* global styles */
@@ -28,6 +29,18 @@
 
 .pad-20 {
   padding: 20px;
+}
+
+.mar-20 {
+  margin: 20px;
+}
+
+.mar-t-20 {
+  margin-top: 20px;
+}
+
+.mar-b-20 {
+  margin-bottom: 20px;
 }
 
 .pad-x-20 {
@@ -43,6 +56,24 @@
 .innerContainer {
   max-width: 1280px;
   margin: 0 auto;
+}
+
+.outlineButtonBase {
+  display: inline-block;
+  padding: 0.5rem 2rem;
+  border: 2px solid var(--common-white);
+  background: transparent;
+}
+
+.outlineButtonBase:hover {
+  border: 2px solid var(--primary-light);
+}
+
+.transitionAll {
+  transition: all 500ms ease-in-out;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
 }
 
 ul {
@@ -117,13 +148,13 @@ body {
 /* landing page start */
 .landingPageContainer {
   padding-top: 30px;
-  padding-bottom: 15rem;
+  padding-bottom: 11rem;
   background: var(--primary-light);
 }
 
 .landingPageContainer p {
   font-weight: 300;
-  font-family: var(--roboto);
+  font-family: var(--primary-font);
   font-size: 1.2rem;
   color: var(--common-white);
   padding-bottom: 5rem;
@@ -135,7 +166,7 @@ body {
 }
 
 .landingPageContainer h4 {
-  font-family: var(--ubuntu);
+  font-family: var(--secondary-font);
   font-weight: 500;
   font-size: 3.2rem;
   color: var(--common-white);
@@ -143,6 +174,200 @@ body {
   width: 70%;
 }
 .landingPageContainer img {
+  position: relative;
+  top: 0;
+  left: 0;
   margin: 1rem 0;
 }
 /* landing page end */
+
+/* slide articles start */
+.slideArticles {
+  background-color: var(--primary-dark);
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.slideArticles p {
+  font-family: var(--primary-font);
+  font-weight: 300;
+  font-size: 1.8rem;
+  color: var(--common-white);
+}
+
+.slideArticles p > span {
+  font-family: var(--secondary-font);
+  font-weight: 500;
+}
+
+.slideArticles p + p {
+  font-family: var(--secondary-font);
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 2rem;
+}
+
+.articleCardsContainer {
+  overflow-x: hidden;
+  white-space: nowrap;
+}
+
+.articleCard {
+  position: relative;
+  display: inline-block;
+  background-color: var(--common-white);
+  width: 80%;
+  max-width: 350px;
+  box-shadow: var(--cardShadow);
+  margin-left: 20px;
+  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
+  transform-origin: left top;
+  -webkit-transform-origin: left top;
+  -moz-transform-origin: left top;
+  -ms-transform-origin: left top;
+  -o-transform-origin: left top;
+}
+
+.articleCard.active {
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
+
+.articleCard::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 7px;
+  background: var(--secondary-main);
+}
+
+.articleImgContainer {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.articleImgContainer::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 60px 60px 0 0;
+  border-color: var(--common-white) transparent transparent transparent;
+}
+
+.articleImgContainer::after {
+  content: "";
+  z-index: 2;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 0 60px 60px;
+  border-color: transparent transparent var(--common-white) transparent;
+}
+
+.articleCard h4 {
+  font-family: var(--secondary-font);
+  font-size: 1.1rem;
+  font-weight: 700;
+  color: var(--secondary-main);
+  width: 70%;
+  line-height: 1.5rem;
+}
+
+.articleBulletsContainer {
+  text-align: center;
+}
+
+.articleBulletsContainer span {
+  overflow: hidden;
+  position: relative;
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  border-radius: 50px;
+}
+
+.articleBulletsContainer span::before {
+  content: "";
+  display: inline-block;
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: var(--common-gray);
+}
+
+.articleBulletsContainer span::after {
+  content: "";
+  z-index: 2;
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  left: 1px;
+  top: 1px;
+  border-radius: 50px;
+  background-color: var(--primary-dark);
+}
+
+.articleBulletsContainer span.active::after {
+  background-color: var(--primary-gray);
+}
+
+/* slide articles end */
+
+/* who we are start */
+.whoWeAre {
+  background: url(./img/who-we-are-bg.jpg) no-repeat top center;
+  background-size: cover;
+  padding: 3rem 2rem;
+  text-align: center;
+  font-family: var(--primary-font);
+}
+
+.whoWeAre h4 {
+  font-size: 1.7rem;
+  color: var(--common-white);
+  font-weight: 400;
+  line-height: 2rem;
+  text-shadow: var(--textShadow);
+  margin-bottom: 0.3rem;
+}
+
+.whoWeAre p {
+  color: var(--common-white);
+  font-weight: 400;
+  line-height: 1.4rem;
+  font-size: 0.9rem;
+  text-shadow: var(--textShadow);
+  margin-bottom: 2.5rem;
+}
+
+.whoWeAre a {
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: var(--common-white);
+}
+
+.whoWeAre a:hover {
+  color: var(--primary-light);
+}
+/* who we are end */
